# aitios-asset

./: Cargo.toml  README.md
src/: err.rs  lib.rs
tests/: cube_with_mtl.mtl  cube_without_obj.mtl  inout_test.rs
